--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ mock==2.0.0
 lxml==3.8.0
 cssselect==0.9.1
 watchdog==0.8.3
-
+freezegun==0.3.9
 coverage==3.7.1
 pytest-cov==2.2.0
 python-coveralls==2.5.0
