--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "description": "User application for the Digital Marketplace",
   "version": "1.0.0",
   "private": true,
-  "engine": "node >= 6.10.3 < 7.0.0",
+  "engines": {
+    "node": "^ 10.15"
+  },
   "dependencies": {
-    "gulp": "3.8.11",
-    "gulp-uglify": "1.5.1",
-    "gulp-sourcemaps": "1.5.2",
     "del": "1.2.0",
-    "gulp-sass": "3.1.0",
-    "gulp-shell": "0.2.9",
+    "digitalmarketplace-frontend-toolkit": "https://github.com/alphagov/digitalmarketplace-frontend-toolkit.git#v34.1.0",
+    "govuk-elements-sass": "3.0.3",
+    "govuk_frontend_toolkit": "5.0.3",
+    "govuk_template": "https://github.com/alphagov/govuk_template/releases/download/v0.19.2/jinja_govuk_template-0.19.2.tgz",
+    "gulp": "3.8.11",
     "gulp-filelog": "0.4.1",
     "gulp-include": "2.3.1",
-    "govuk_frontend_toolkit": "5.0.3",
-    "govuk-elements-sass": "3.0.3",
     "gulp-jasmine-phantom": "3.0.0",
-    "jquery": "1.12.0",
+    "gulp-sass": "3.1.0",
+    "gulp-shell": "0.2.9",
+    "gulp-sourcemaps": "1.5.2",
+    "gulp-uglify": "1.5.1",
     "hogan.js": "3.0.2",
-    "jquery-details": "https://github.com/mathiasbynens/jquery-details/archive/v0.1.0.tar.gz",
-    "digitalmarketplace-frontend-toolkit": "https://github.com/alphagov/digitalmarketplace-frontend-toolkit.git#v34.1.0",
-    "govuk_template": "https://github.com/alphagov/govuk_template/releases/download/v0.19.2/jinja_govuk_template-0.19.2.tgz"
+    "jquery": "1.12.0",
+    "jquery-details": "https://github.com/mathiasbynens/jquery-details/archive/v0.1.0.tar.gz"
   },
   "scripts": {
     "test": "./node_modules/gulp/bin/gulp.js test",
