--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "gulp-sourcemaps": "1.5.2",
     "gulp-uglify": "1.5.1",
     "hogan.js": "3.0.2",
-    "jquery": "1.12.0",
-    "jquery-details": "https://github.com/mathiasbynens/jquery-details/archive/v0.1.0.tar.gz"
+    "jquery": "1.12.0"
   },
   "scripts": {
     "test": "./node_modules/gulp/bin/gulp.js test",
