Add Standard JS
To ensure we have a consistent code style across all our applications.

Ran `npm install standard --save-dev` to install standard, and updated
the npm test script.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "jquery": "1.12.0"
   },
   "scripts": {
-    "test": "gulp test",
     "frontend-build:development": "gulp build:development",
     "frontend-build:production": "gulp build:production",
-    "frontend-build:watch": "gulp watch"
+    "frontend-build:watch": "gulp watch",
+    "test": "standard gulpfile.js && gulp test"
+  },
+  "devDependencies": {
+    "standard": "^14.1.0"
   }
 }
