--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "^ 10.15"
   },
   "dependencies": {
-    "del": "1.2.0",
+    "del": "^5.1.0",
     "digitalmarketplace-frontend-toolkit": "https://github.com/alphagov/digitalmarketplace-frontend-toolkit.git#v34.1.0",
     "govuk-elements-sass": "3.0.3",
     "govuk_frontend_toolkit": "5.0.3",
