--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,3 +10,5 @@ mock==3.0.5
 pytest==4.6.3
 pytest-cov==2.7.1
 watchdog==0.9.0
+
+git+https://github.com/alphagov/digitalmarketplace-test-utils.git@2.5.1#egg=digitalmarketplace-test-utils==2.5.1
