--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "standard gulpfile.js && gulp test"
   },
   "devDependencies": {
+    "jest": "^24.9.0",
     "standard": "^14.1.0"
   }
 }
