--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ govuk-country-register==0.5.0
 git+https://github.com/alphagov/govuk-frontend-jinja.git@v0.5.1-alpha#egg=govuk-frontend-jinja
 idna==2.8                 # via cryptography, requests
 inflection==0.3.1
-itsdangerous==0.24
+itsdangerous==0.24        # via flask
 jinja2==2.10.3            # via flask
 jmespath==0.9.4           # via boto3, botocore
 mailchimp3==3.0.6
