Removed unused JS tests
These are now incorporated into DM GOVUK Frontend.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "frontend-build:development": "gulp build:development",
     "frontend-build:production": "gulp build:production",
     "frontend-build:watch": "gulp watch",
-    "test": "standard \"gulpfile.js\" \"spec/**/*.js\" && jest"
+    "test": "standard \"gulpfile.js\""
   },
   "devDependencies": {
     "jest": "^25.1.0",
