--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
 Flask>=1.0.4,<1.1.0        # pyup: >=1.0.0,<1.1.0
-Flask-Login>=0.4.1,<0.5.0  # pyup: >=0.4.1,<0.5.0
+Flask-Login>=0.5.0         # pyup: >=0.5.0,<0.6.0
 Flask-WTF>=0.14.3,<0.15.0  # pyup: >=0.14.3,<0.15.0
 
 git+https://github.com/alphagov/digitalmarketplace-utils.git@51.4.0#egg=digitalmarketplace-utils
