--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.7.1",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "jquery": "3.4.1"
+    "gulp-uglify": "^3.0.2"
   },
   "scripts": {
     "frontend-build:development": "gulp build:development",
