Update pip-tools from 4.4.2 to 5.1.0

--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,5 +1,7 @@
 -c requirements.txt
 
+pip-tools>5.0.0
+
 coverage
 coveralls
 cssselect
@@ -11,7 +13,5 @@ pytest
 pytest-cov
 python-dotenv
 watchdog
-
-git+https://github.com/lfdebrux/pip-tools.git@4.4.2-lock-alpha#egg=pip-tools
 
 git+https://github.com/alphagov/digitalmarketplace-test-utils.git@2.6.1#egg=digitalmarketplace-test-utils
