--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -25,7 +25,7 @@ mock==3.0.5               # via -r requirements-dev.in
 more-itertools==8.0.2     # via pytest
 packaging==20.0           # via pytest
 pathtools==0.1.2          # via watchdog
-git+https://github.com/lfdebrux/pip-tools.git@4.4.2-lock-alpha#egg=pip-tools  # via -r requirements-dev.in
+pip-tools==5.1.0          # via -r requirements-dev.in
 pluggy==0.13.1            # via pytest
 py==1.8.1                 # via pytest
 pycodestyle==2.5.0        # via flake8
@@ -42,3 +42,6 @@ urllib3==1.25.8           # via -c requirements.txt, requests
 watchdog==0.9.0           # via -r requirements-dev.in
 wcwidth==0.1.8            # via pytest
 zipp==0.6.0               # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
