--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ govuk-country-register==0.5.0  # via digitalmarketplace-utils
 git+https://github.com/alphagov/govuk-frontend-jinja.git@v0.5.1-alpha#egg=govuk-frontend-jinja  # via -r requirements.in
 idna==2.8                 # via cryptography, requests
 inflection==0.3.1         # via digitalmarketplace-content-loader
-itsdangerous==1.1.0       # via flask, flask-wtf
+itsdangerous==1.1.0       # via -r requirements.in, flask, flask-wtf
 jinja2==2.10.3            # via digitalmarketplace-content-loader, flask, govuk-frontend-jinja
 jmespath==0.9.4           # via boto3, botocore
 mailchimp3==3.0.6         # via digitalmarketplace-utils
