--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "gulp-uglify": "^3.0.2"
   },
   "scripts": {
-    "frontend-build:development": "gulp build:development",
-    "frontend-build:production": "gulp build:production",
-    "frontend-build:watch": "gulp watch",
+    "frontend-build:development": "./node_modules/gulp/bin/gulp.js build:development",
+    "frontend-build:production": "./node_modules/gulp/bin/gulp.js build:production",
+    "frontend-build:watch": "./node_modules/gulp/bin/gulp.js watch",
     "test": "standard \"gulpfile.js\""
   },
   "devDependencies": {
