Replace gulp with npm scripts
gulp-cli hasn't been updated since 2019 and is causing a lot of
alerts about insecure JavaScript dependencies; what if we could get rid
of all those dependencies instead of working out how to update them?

This commit replaces our gulp workflow with a couple of npm scripts.

Notes
=====

Our gulp workflow was pretty simple to begin with, but this version is
missing a few things:

1. no difference between building for production or development
2. no watch script
3. no pretty output with emojis
4. no JavaScript sourcemaps

However I think CSS sourcemaps have pretty much removed the need for 1.,
and we can add 2. at a later date if there is demand for it.

There are no JavaScript sourcemaps because of the way the JavaScript
file is generated by using `cat`; however because the input files from
govuk-frontend and digitalmarketplace-govuk-frontend have already been
mangled without sourcemaps there is not much of use that is lost.

I miss 3. :sniff:, but I think it is a price worth paying for so many
fewer dependencies.

Why not use invoke?
===================

Over in Python land we're currently migrating our makefiles to `invoke`;
I considered using invoke instead of npm scripts but then we would have
to install digitalmarketplace-developer-tools in our Docker images, and
that meant more complexity that I couldn't be bothered with. But we
could do it, with the same commands, without too much hassle.

--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "node": "^10.18.1"
   },
   "dependencies": {
-    "del": "^6.0.0",
     "digitalmarketplace-govuk-frontend": "github:alphagov/digitalmarketplace-govuk-frontend#pre-release-v3.0.0-govuk-frontend-3-r4",
     "govuk-frontend": "^3.11.0",
-    "gulp": "^4.0.2",
-    "gulp-filelog": "0.4.1",
-    "gulp-include": "^2.4.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-shell": "^0.8.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2"
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.32.8",
+    "uglify-js": "^3.13.3"
   },
   "scripts": {
-    "frontend-build:development": "gulp build:development",
-    "frontend-build:production": "gulp build:production",
-    "frontend-build:watch": "gulp watch",
-    "test": "standard \"gulpfile.js\""
+    "frontend-build:development": "npm run build",
+    "frontend-build:production": "npm run build",
+    "clean": "rm -rf app/static/* && mkdir -p app/static/{fonts,images,javascripts,stylesheets,svg}",
+    "build": "run-s clean copy-assets compile",
+    "compile": "run-p compile-js compile-css",
+    "compile-js": "cat node_modules/govuk-frontend/govuk/all.js node_modules/digitalmarketplace-govuk-frontend/digitalmarketplace/all.js app/assets/javascripts/application.js | uglifyjs --mangle --compress > app/static/javascripts/application.js",
+    "compile-css": "sass --load-path=app/assets/scss --load-path=node_modules/govuk-frontend --load-path=. --embed-sources app/assets/scss/application.scss app/static/stylesheets/application.css",
+    "copy-assets": "cp -r node_modules/govuk-frontend/govuk/assets/ app/assets/images app/assets/svg app/static/",
+    "test": "standard gulpfile.js"
   },
   "devDependencies": {
     "jest": "^26.6.3",
