--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -22,6 +22,10 @@ flake8==3.7.9
     # via -r requirements-dev.in
 freezegun==0.3.12
     # via -r requirements-dev.in
+importlib-metadata==3.7.3
+    # via
+    #   pluggy
+    #   pytest
 lxml==4.6.3
     # via -r requirements-dev.in
 mccabe==0.6.1
@@ -65,10 +69,14 @@ six==1.13.0
     #   mock
     #   packaging
     #   python-dateutil
+typing-extensions==3.7.4.3
+    # via importlib-metadata
 watchdog==0.9.0
     # via -r requirements-dev.in
 wcwidth==0.1.8
     # via pytest
+zipp==3.4.1
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
